Fix build issues

--- a/debian_package/changelog
+++ b/debian_package/changelog
@@ -1,4 +1,4 @@
-vc-mipi-driver-bcm2712 (${VERSION}) unstable; urgency=medium
+vc-mipi-driver-bcm2712 (${VERSION_DEB_PACKAGE}) unstable; urgency=medium
 
   * Initial release
 
